[gd_scene load_steps=5 format=3 uid="uid://clctv3u6n36jk"]

[ext_resource type="Script" uid="uid://cf600l26qrct0" path="res://Assets/Scripts/settings.gd" id="1_settings"]
[ext_resource type="Texture2D" uid="uid://dfyo5h71tdm1c" path="res://Assets/Sprites/Assests_Jogo/Jogo/0 .1- Como jogar.png" id="2_anvvt"]
[ext_resource type="FontFile" uid="uid://5fw8ttqa62cn" path="res://Assets/Fonts/Silkscreen/Silkscreen-Regular.ttf" id="2_font"]
[ext_resource type="Theme" uid="uid://cwjaoo03ur0mh" path="res://Assets/Botoes/default_btn.tres" id="3_theme"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_anvvt")
expand_mode = 1
stretch_mode = 6

[node name="ContainerTitle" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -99.0
offset_right = 194.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ContainerTitle"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "CONFIGURAÇÕES"
horizontal_alignment = 1

[node name="ContainerVolume" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = -19.0
offset_right = 289.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxVolume" type="VBoxContainer" parent="ContainerVolume"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VolumeLabel" type="Label" parent="ContainerVolume/VBoxVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "VOLUME DA MÚSICA"
horizontal_alignment = 1

[node name="HBoxVolume" type="HBoxContainer" parent="ContainerVolume/VBoxVolume"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VolumeSlider" type="HSlider" parent="ContainerVolume/VBoxVolume/HBoxVolume"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="VolumeValueLabel" type="Label" parent="ContainerVolume/VBoxVolume/HBoxVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "100%"
horizontal_alignment = 1

[node name="ContainerApply" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = 250.0
offset_right = 118.0
offset_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2

[node name="ApplyButton" type="Button" parent="ContainerApply"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = ExtResource("3_theme")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "APLICAR"

[node name="ContainerClose" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = 321.0
offset_right = 118.0
offset_bottom = 401.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="ContainerClose"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = ExtResource("3_theme")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "VOLTAR"
